Some content and styling

--- a/ui/src/App.scss
+++ b/ui/src/App.scss
@@ -1,6 +1,6 @@
 
-@import "./auth/auth.css";
-@import "./components/components.css";
+@import "./auth/auth.scss";
+@import "./components/components.scss";
 
 .App {
   text-align: center;
