--- a/ui/src/auth/auth.scss
+++ b/ui/src/auth/auth.scss
@@ -73,5 +73,48 @@
 .regForm .email-input-fields,
 .regForm .passwords-input-fields {
   width        : 100%;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+}
+
+.sec-strong-pass-res {
+  width        : 100%;
+  display      : grid;
+  margin-bottom: 20px;
+
+  label {
+    width     : 100%;
+    text-align: start;
+    font-size : 13px;
+  }
+
+  .exist {
+    color: green;
+  }
+
+  .missing {
+    color: red;
+  }
+}
+
+.wizard-control-btns {
+  margin-bottom: 20px;
+}
+
+.StepZero-paper {
+  padding   : 20px;
+  text-align: justify;
+  min-width : 200px;
+}
+
+.fullWith {
+  width: 80%;
+}
+
+#outlined-multiline-static {
+  min-width: 200px;
+  width    : 100%;
+}
+
+#reg-step5-company-details .MuiTextField-root {
+  width: 80% !important;
 }
