--- a/ui/src/components/components.scss
+++ b/ui/src/components/components.scss
@@ -2,3 +2,8 @@
   text-decoration: none !important;
   color: rgba(0, 0, 0, 0.54);
 }
+
+
+.MuiAppBar-colorPrimary {
+  background-color: #00000082 !important;
+}
