--- a/ui/src/index.scss
+++ b/ui/src/index.scss
@@ -12,7 +12,7 @@ $light-box-shadow: rgba(255, 255, 255, 0.5);
 
 html {
   // background: $color;
-
+  background: whitesmoke;
   &::-webkit-scrollbar {
     -webkit-appearance: none;
     width             : 10px;
