--- a/ui/src/index.scss
+++ b/ui/src/index.scss
@@ -60,3 +60,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.MuiDivider-root {
+  margin: 15px 0 !important;
+}
